# neuralnethack

./: .clang-format  .gitignore  .travis.yml  .versionrc  AGENTS.md  AUTHORS  CHANGELOG.md  CMakeLists.txt  ChangeLog  GPL_header  LICENSE  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  TODO.md  bootstrap  config.h.cmake  config.h.in  configure  configure.ac  libtool
bench/: .gitignore  README.md  bench_mlpack.cc  bench_mlpack_covtype.cc  bench_nnh.cc  bench_nnh_covtype.cc  bench_tinydnn.cc  bench_tinydnn_covtype.cc  covtype_loader.hh  pima_loader.hh  run.sh  summarise.py  timing.hh
datafiles/: Savann-1314.txt  Savann-description.txt
datasets/: .gitignore  get_covtype.sh
datatools/: CoreDataSet.cc  DataManager.cc  DataManager.hh  DataSet.cc  DataSet.hh  Makefile.am  Normaliser.cc  Normaliser.hh  Pattern.cc
design/: inp  nethack.vpp
doc/: comparison.md
evaltools/: EvalTools.hh  Evaluator.cc  Makefile.am  Roc.hh
examples/: cubic_ensemble_uncertainty.cc  iris_ensemble_uncertainty.cc  multiclass_iris.cc  multiclass_wine.cc  (+5 more)
neuralnethack/: Config.cc  Config.hh  Ensemble.cc  Ensemble.hh  EnsembleBuilder.cc  EnsembleBuilder.hh  Factory.cc  Factory.hh  FeatureSelector.cc  FeatureSelector.hh  Makefile.am  Makefile.in  ModelEstimator.cc  ModelEstimator.hh  ModelSelector.cc  ModelSelector.hh  NeuralNetHack.cc  NeuralNetHack.hh  OddsRatio.cc  OddsRatio.hh  PrintUtils.cc  PrintUtils.hh  Random.cc  Random.hh  Saliency.cc  Saliency.hh  TestWeights.cc
neuralnethack/datatools/: BootstrapSampler.cc  BootstrapSampler.hh  CoreDataSet.cc  CoreDataSet.hh  CrossSplitSampler.cc  CrossSplitSampler.hh  DataManager.cc  DataManager.hh  DataSet.cc  DataSet.hh  DataTools.cc  DataTools.hh  DummySampler.cc  DummySampler.hh  HoldOutSampler.cc  HoldOutSampler.hh  Makefile.am  Makefile.in  Normaliser.cc  Normaliser.hh  Pattern.cc  Pattern.hh  Sampler.cc  Sampler.hh
neuralnethack/evaltools/: Conformal.cc  Conformal.hh  ConfusionMatrix.cc  ConfusionMatrix.hh  EvalTools.cc  EvalTools.hh  Evaluator.cc  Evaluator.hh  Gof.cc  Gof.hh  Makefile.am  Makefile.in  Roc.cc  Roc.hh  Uncertainty.cc  Uncertainty.hh
neuralnethack/matrixtools/: Makefile.am  Makefile.in  MatrixTools.cc  MatrixTools.hh
neuralnethack/mlp/: Activation.cc  Activation.hh  Adam.cc  Adam.hh  CrossEntropy.cc  CrossEntropy.hh  ELULayer.cc  ELULayer.hh  Error.cc  Error.hh  GradientDescent.cc  GradientDescent.hh  Layer.cc  Layer.hh  LeakyReLULayer.cc  LeakyReLULayer.hh  LinearLayer.cc  LinearLayer.hh  Makefile.am  Makefile.in  Mlp.cc  Mlp.hh  MultiLayerPerceptron.cc  MultiLayerPerceptron.hh  QuasiNewton.cc  QuasiNewton.hh  ReLULayer.cc  ReLULayer.hh  Serialization.cc  Serialization.hh  SigmoidLayer.cc  SigmoidLayer.hh  SummedSquare.cc  SummedSquare.hh  TanHypLayer.cc  TanHypLayer.hh  Trainer.cc  Trainer.hh  Weights.cc  Weights.hh
neuralnethack/parser/: Makefile.in  NetworkParser.cc  NetworkParser.hh  Parser.cc  Parser.hh  TomlParser.cc  TomlParser.hh
src/: Bagger.cc  Bootstrapper.hh  Committee.cc  Committee.hh  Config.cc  Config.hh  CrossValidator.hh  EnsembleBuilder.hh  Error.cc  Error.hh  ErrorMeasures.cc  ErrorMeasures.hh  Factory.hh  GradientDescent.cc  GradientDescent.hh  Layer.cc  Layer.hh  Linear.cc  Linear.hh  Makefile.am  Makefile.in  MatrixTools.cc  MatrixTools.hh  Mlp.cc  ModelEstimator.cc  ModelEstimator.hh  NetHack.cc  NeuralNetHack.cc  NeuralNetHack.hh  Parser.cc  Parser.hh  PrintUtils.cc  PrintUtils.hh  QuasiNewton.cc  QuasiNewton.hh  Sigmoid.hh  SummedSquare.cc  SummedSquare.hh  Supervisor.cc  TanHyp.hh  (+14 more)
src/datatools/: DataSet.cc  DataTools.hh  Makefile.am  Normaliser.cc  Normaliser.hh  Pattern.cc  Pattern.hh
src/evaltools/: EvalTools.cc  EvalTools.hh  Evaluator.hh
src/mlp/: CrossEntropy.cc  CrossEntropy.hh  Error.hh  GradientDescent.hh  Makefile.am  Mlp.cc  Neuron.hh  QuasiNewton.cc  SummedSquare.cc  SummedSquare.hh  Trainer.cc  Trainer.hh  Weights.hh
tags/release-0.2.2/mlp/: Linear.hh  Makefile.am  Mlp.cc  Neuron.cc  Neuron.hh  Sigmoid.cc  Sigmoid.hh  TanHyp.hh
tags/release-0.2.3/mlp/: Layer.cc  Layer.hh  LinearLayer.cc  Makefile.am  Mlp.hh  SigmoidLayer.cc  Weights.cc
tags/release-0.2.4/: FEATURES  Makefile.am  TODO  configure.ac
tags/release-0.2.4/datatools/: CoreDataSet.hh  DataManager.cc  Makefile.am  Normaliser.cc  Normaliser.hh  Pattern.hh
tags/release-0.2.4/evaltools/: Roc.cc
tags/release-0.2.4/matrixtools/: Makefile.am
tags/release-0.2.4/scripts/: runann.pl
tags/release-0.2.4/src/: Bagger.hh  Bootstrapper.cc  Config.hh  CrossSplitter.cc  CrossSplitter.hh  CrossValidator.cc  CrossValidator.hh  EnsembleBuilder.cc  Factory.cc  Makefile.am  NeuralNetHack.cc  main.cc
tags/release-0.2.4/src/mlp/: Error.cc  GradientDescent.cc  Layer.cc  Layer.hh  LinearLayer.cc  LinearLayer.hh  Mlp.hh  MultiLayerPerceptron.cc  MultiLayerPerceptron.hh  QuasiNewton.hh  SigmoidLayer.cc  SigmoidLayer.hh  TanHypLayer.cc  Weights.cc
tags/release-0.2.4/testing/: config-savann.txt
tags/release-0.9.0/: ChangeLog  Makefile.am  TODO  bootstrap
tags/release-0.9.0/doc/: Doxyfile
tags/release-0.9.0/doc/design/: mlp.xmi
tags/release-0.9.0/neuralnethack/: Config.cc  EnsembleBuilder.cc  Makefile.am  ModelEstimator.cc  OddsRatio.cc  PrintUtils.cc
tags/release-0.9.0/neuralnethack/datatools/: BootstrapSampler.cc  DataManager.cc  DataSet.hh  DummySampler.cc  DummySampler.hh  HoldOutSampler.cc  HoldOutSampler.hh  Pattern.hh
tags/release-0.9.0/neuralnethack/mlp/: CrossEntropy.cc  Error.cc  Error.hh  Makefile.am  Mlp.cc  QuasiNewton.cc  SigmoidLayer.hh  SummedSquare.cc  TanHypLayer.hh
tags/release-0.9.0/neuralnethack/parser/: Parser.cc
tags/release-0.9.0/src/: Makefile.am  ann.cc
tags/release-0.9.0/test/: Makefile.am  config-ecg.txt  config-xor.txt  config.txt  testSaliency.cc  testing.cc
tags/release-0.9.0/test/pima-indians-diabetes/: config-pima.txt
trunk/neuralnethack/matrixtools/: Makefile.am  MatrixTools.cc  MatrixTools.hh
trunk/neuralnethack/mlp/: CrossEntropy.hh  GradientDescent.cc  GradientDescent.hh  Layer.cc  Makefile.am  QuasiNewton.hh
trunk/neuralnethack/parser/: Makefile.am
(+185 files in other folders)
