# $Id: Makefile.am 1646 2007-05-29 14:22:13Z michael $
MAINTAINERCLEANFILES	= Makefile.in configure aclocal.m4 stamp-h1 config.h.in
EXTRA_DIST 				= autotools scripts/parsemsresults.pl scripts/runann.pl scripts/nnh2matlab.pl test/config.txt test/pima-indians-diabetes test/parserconfigure.txt
SUBDIRS	= . neuralnethack src test
