# $Id: Makefile.am 1200 2005-03-10 15:18:02Z michael $
MAINTAINERCLEANFILES = Makefile.in
INCLUDES= -I. -I.. -I$(top_srcdir)/src

noinst_LIBRARIES=libmlp.a
libmlp_a_SOURCES=\
	MultiLayerPerceptron.cc MultiLayerPerceptron.hh \
	Trainer.cc Trainer.hh \
	GradientDescent.cc GradientDescent.hh \
	QuasiNewton.cc QuasiNewton.hh \
	Error.cc Error.hh \
	SummedSquare.cc SummedSquare.hh \
	CrossEntropy.cc CrossEntropy.hh \
	Mlp.cc Mlp.hh \
	Layer.cc Layer.hh \
	SigmoidLayer.cc SigmoidLayer.hh \
	TanHypLayer.cc TanHypLayer.hh \
	LinearLayer.cc LinearLayer.hh \
	Weights.cc Weights.hh

