# $Id: Makefile.am 1632 2007-05-09 11:09:15Z michael $
MAINTAINERCLEANFILES	= Makefile.in configure aclocal.m4 stamp-h1 config.h.in
EXTRA_DIST 				= autotools scripts/runann.pl scripts/nnh2matlab.pl test/config.txt test/pima-indians-diabetes test/parserconfigure.txt
SUBDIRS	= . neuralnethack src test
