MAINTAINERCLEANFILES = Makefile.in
#INCLUDES= -I. -I.. -I$(top_srcdir)/src

noinst_LIBRARIES=libmlp.a
libmlp_a_SOURCES=\
	MultiLayerPerceptron.cc MultiLayerPerceptron.hh \
	Mlp.cc Mlp.hh \
	Layer.cc Layer.hh \
	Neuron.cc Neuron.hh \
	Sigmoid.cc Sigmoid.hh \
	TanHyp.cc TanHyp.hh \
	Linear.cc Linear.hh \
	Weights.cc Weights.hh

