MAINTAINERCLEANFILES = Makefile.in
#INCLUDES= -I. -I.. -I$(top_srcdir)/src

noinst_LIBRARIES=libmlp.a
libmlp_a_SOURCES=\
	MultiLayerPerceptron.cc MultiLayerPerceptron.hh \
	Mlp.cc Mlp.hh \
	Layer.cc Layer.hh \
	SigmoidLayer.cc SigmoidLayer.hh \
	TanHypLayer.cc TanHypLayer.hh \
	LinearLayer.cc LinearLayer.hh \
	Weights.cc Weights.hh

