# $Id: Makefile.am 1163 2005-03-02 09:59:15Z michael $
MAINTAINERCLEANFILES	= Makefile.in
#INCLUDES				= -I. -I..
noinst_LIBRARIES		= libdatatools.a
libdatatools_a_SOURCES	= DataTools.cc DataTools.hh \
							Normaliser.cc Normaliser.hh \
							DataManager.cc DataManager.hh \
							CoreDataSet.cc CoreDataSet.hh \
							DataSet.cc DataSet.hh \
							Pattern.cc Pattern.hh

