# $Id: Makefile.am 1710 2008-07-01 12:22:42Z michael $
MAINTAINERCLEANFILES = Makefile.in
INCLUDES= -I. -I.. -I$(top_srcdir)/src

noinst_LTLIBRARIES = libmatrixtools.la

libmatrixtools_la_SOURCES = MatrixTools.cc

include_matrixtoolsdir = $(includedir)/neuralnethack/matrixtools

include_matrixtools_HEADERS = MatrixTools.hh

